packages/cxl-ui/scss/cxl-marketing-nav.scss
@use "~@conversionxl/cxl-lumo-styles/scss/mq";

:host {
  --lumo-clickable-cursor: pointer;

  ::part(menu-bar-button),
  vaadin-menu-bar-button[theme~="cxl-marketing-nav"] {
    min-width: auto;
    color: var(--lumo-shade);
    margin-inline: var(--lumo-space-s);
  }

  ::part(overflow-button) {
    margin-left: auto;
  }

  nav {
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    max-width: 100vw;
    min-height: var(--cxl-marketing-nav-min-height, 44px);
    padding: 0 var(--lumo-space-m);
    overflow: hidden;

    &:not([wide]) {
      vaadin-menu-bar {
        max-width: 64px;
      }

      .container {
        justify-content: space-between;

        .cxl-logo{
          margin-left: 0;
          padding-left: 0;
        }

        .search-button {
          width: 140px;
          color: var(--lumo-shade);
        }

        vaadin-menu-bar::part(overflow-button) {
          margin-right: 0;
          padding-right: 0;
        }
      }
    }

    .container {
      display: flex;
      align-items: center;
      width: 100%;
      max-width: var(--cxl-content-max-width-wide, none);

      /* stylelint-disable-next-line selector-no-qualifying-type */
      vaadin-menu-bar-button.cxl-logo {
        min-width: auto;
      }
    }

    vaadin-menu-bar {
      width: 100%;
    }

    &[minimal] {
      vaadin-menu-bar {
        &::part(overflow-button) {
          pointer-events: none;
          visibility: hidden;
        }
      }
    }

    ::part(menu-bar-button),
    ::slotted(.menu-item),
    .menu-item {
      min-width: min-content;
      white-space: nowrap;
    }

    /* stylelint-disable-next-line selector-no-qualifying-type */
    &#menu-global-items, &#menu-primary-items {
      background-color: var(--lumo-base-color);
      border-bottom: 1px solid var(--lumo-shade-5pct);
    }

    .vaadin-context-menu-item--dropdown-icon {
      display: none;
    }
  }
}

:host([wide]) {
  .vaadin-context-menu-item--dropdown-icon {
    display: inline-block;
  }
  .vaadin-menu-bar-button--icon {
    display: none;
  }

  nav {
    .cxl-logo ~ vaadin-menu-bar {
      max-width: calc(100% - 60px);
    }
  }
}

/** Search form */
::slotted(#search-form-container) {
  display: none;
}

/**
 * headroom.js
 */
:host(.headroom) {
  position: static;
  top: 0;
  right: 0;
  left: 0;
  z-index: 2; // @see `cxl-app-layout[layout=2c-l]`.
}

:host(.headroom--not-top) {
  position: fixed;
}

:host(.headroom--not-top[wide]) {
  #menu-global-items {
    display: none;
  }
}

